--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.7.10-2.4alpha"
+group= "com.chiorichan.ZapApples"
+archivesBaseName = "zapapples"
 
 minecraft {
-    version = "1.7.10-10.13.0.1208"
+    version = "1.7.10-10.13.2.1291"
     assetDir = "eclipse/assets"
 }
 
